--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,32 @@
-certifi==2024.2.2
+attrs==22.2.0
+btrfsutil==6.5.2
+cffi==1.15.1
 charset-normalizer==3.3.2
-idna==3.6
-lxml==5.1.0
+cryptography==41.0.4
+dbus-python==1.3.2
+distro==1.8.0
+ecdsa==0.18.0
+future==0.18.3
+greenlet==2.0.2
+idna==3.4
+msgpack==1.0.5
+numpy==1.26.1
+OpenCC==1.1.5
+optimus-manager==1.5
+packaging==23.1
+pefile==2023.2.7
+ply==3.11
+psutil==5.9.5
+PyAudio==0.2.13
+pybind11==2.11.1
+pycairo==1.24.0
+pycparser==2.21
+pygame-sdl2==2.1.0
+PyGObject==3.46.0
+pynvim==0.4.3
+Ren-Py==8.2.0.0+unofficial
 requests==2.31.0
-urllib3==2.2.1
+six==1.16.0
+smbus==1.1
+TBB==0.2
+urllib3==1.26.15
