--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,11 @@ cachetools==5.3.3
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
+Flask==3.0.2
 gitdb==4.0.11
 GitPython==3.1.42
 idna==3.6
+itsdangerous==2.1.2
 Jinja2==3.1.3
 jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
@@ -41,3 +43,4 @@ typing_extensions==4.10.0
 tzdata==2024.1
 urllib3==2.2.1
 watchdog==4.0.0
+Werkzeug==3.0.1
